--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,10 @@
 // Here you can add other styles
+
+.login{
+        height: 1200px;
+        background-image: url("assets/img/background.jpg");
+        // background-repeat: repeat;
+        opacity: 3;
+}
+       
+ 
